--- a/confectio-dark-syntax/styles/colors.less
+++ b/confectio-dark-syntax/styles/colors.less
@@ -1,15 +1,48 @@
 // These colors are specific to the theme. Do not use in a package!
 
-@very-light-gray: #c5c8c6;
-@light-gray: #969896;
-@gray: #373b41;
-@dark-gray: #282a2e;
-@very-dark-gray: #1d1f21;
+// Config -----------------------------------
+@syntax-hue:          210;
+@syntax-saturation:    4%;
+@syntax-brightness:   84%;
 
-@cyan: #8abeb7;
-@blue: #81a2be;
-@purple: #b294bb;
-@green: #b5bd68;
-@red: #cc6666;
-@orange: #de935f;
-@light-orange: #f0c674;
+// Base colors -----------------------------------
+@syntax-accent: hsl(@syntax-hue, 80%, 67%); // #66AAEE;
+@syntax-guide:  fade(@syntax-fg, 20%);
+@syntax-fg:     hsl(@syntax-hue, @syntax-saturation, @syntax-brightness);
+@syntax-bg:     hsl(@syntax-hue, 4%, 23%);  // #383B3D;
+
+// Monochrome -----------------------------------
+@very-light-gray: hsl(@syntax-hue, 8%, 84%); // #D3D6D9;
+@light-gray:      hsl(@syntax-hue, 8%, 76%); // #BDC2C7;
+@gray:            hsl(@syntax-hue, 8%, 60%); // #9199A1;
+@dark-gray:       hsl(@syntax-hue, 8%, 38%); // #596169;
+@very-dark-gray:  hsl(@syntax-hue, 8%, 23%); // #363B3F;
+@black:           hsl(@syntax-hue, 8%, 16%); // #26292C;
+
+// Colors -----------------------------------
+@red:     hsl(  0, 100%, 73%); // #FF7777; <- Red
+@orange:  hsl( 16, 100%, 73%); // #FF9A75; <- Orange
+@orange2: hsl( 30, 100%, 73%); // #FFCC77; <- Orange 2
+@yellow:  hsl( 52,  90%, 73%); // #F8E87C; <- Yellow
+@green:   hsl(120,  60%, 67%); // #77DD77; <- Green
+@teal:    hsl(180,  45%, 63%); // #77CCCC; <- Teal
+@cyan:    hsl(187, 100%, 73%); // #77EEFF; <- Cyan
+@blue:    hsl(218, 100%, 73%); // #77AAFF; <- Blue
+@blue2:   hsl(240,  50%, 73%); // #9999DD; <- Blue 2
+@purple:  hsl(264,  71%, 77%); // #BB99EE; <- Purple
+@purple2: hsl(315, 100%, 73%); // #FF77DD; <- Purple 2
+@magenta: hsl(336, 100%, 73%); // #FF77BB; <- Magenta
+
+// Faded Colors ---------------------------
+@red-l:     fade(@red,     60%);
+@orange-l:  fade(@orange,  60%);
+@orange2-l: fade(@orange2, 60%);
+@yellow-l:  fade(@yellow,  60%);
+@green-l:   fade(@green,   60%);
+@teal-l:    fade(@teal,    60%);
+@cyan-l:    fade(@cyan,    60%);
+@blue-l:    fade(@blue,    60%);
+@blue2-l:   fade(@blue2,   60%);
+@purple-l:  fade(@purple,  60%);
+@purple2-l: fade(@purple2, 60%);
+@magenta-l: fade(@magenta, 60%);
