--- a/confectio-dark-syntax/styles/syntax-variables.less
+++ b/confectio-dark-syntax/styles/syntax-variables.less
@@ -4,28 +4,39 @@
 // include a syntax-variables.less file.
 
 // General colors
-@syntax-text-color: @very-light-gray;
+@syntax-text-color: @syntax-fg;
 @syntax-cursor-color: white;
-@syntax-selection-color: lighten(@dark-gray, 10%);
-@syntax-background-color: @very-dark-gray;
+@syntax-selection-color: @syntax-guide;
+@syntax-selection-flash-color: lighten(@syntax-accent, 20%);
+@syntax-background-color: @syntax-bg;
 
 // Guide colors
 @syntax-wrap-guide-color: @dark-gray;
 @syntax-indent-guide-color: @gray;
-@syntax-invisible-character-color: @gray;
+@syntax-invisible-character-color: @dark-gray;
 
 // For find and replace markers
-@syntax-result-marker-color: @light-gray;
+@syntax-result-marker-color: @gray;
 @syntax-result-marker-color-selected: white;
 
 // Gutter colors
-@syntax-gutter-text-color: @very-light-gray;
+@syntax-gutter-text-color: @light-gray;
 @syntax-gutter-text-color-selected: @syntax-gutter-text-color;
-@syntax-gutter-background-color: @dark-gray;
-@syntax-gutter-background-color-selected: @gray;
+@syntax-gutter-background-color: @syntax-bg;
+@syntax-gutter-background-color-selected: @dark-gray;
 
 // For git diff info. i.e. in the gutter
-@syntax-color-renamed: @blue;
-@syntax-color-added: @green;
+@syntax-color-renamed:  @blue;
+@syntax-color-added:    @green;
 @syntax-color-modified: @orange;
-@syntax-color-removed: @red;
+@syntax-color-removed:  @red;
+
+// Custom Syntax Variables -----------------------------------
+// Don't use in packages
+
+@syntax-cursor-line: fade(@syntax-fg, 4%); // needs to be semi-transparent to show search results
+
+@syntax-deprecated-fg: darken(@syntax-color-modified, 30%);
+@syntax-deprecated-bg: @syntax-color-modified;
+@syntax-illegal-fg:    white;
+@syntax-illegal-bg:    @syntax-color-removed;
